// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputPassword > should render as a password field 1`] = `
<DocumentFragment>
  <div
    class="css-n1b0kl"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="no-ligatures w-full border-none css-1vs1awz"
        data-testid="InputPassword"
        type="password"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      data-testid="Input__addon-end"
    >
      <div
        class=""
      >
        <button
          class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
          data-ring-focus-margin="-m-1"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="eye"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                />
                <path
                  d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                />
              </g>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputPassword > should render as a password isInvalid 1`] = `
<DocumentFragment>
  <div
    class="css-12mz4i6"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="no-ligatures w-full border-none css-1vs1awz"
        data-testid="InputPassword"
        name="test"
        type="password"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      data-testid="Input__addon-end"
    >
      <span
        data-errortext="Error message for password"
        data-testid="Input__error"
      >
        <div
          class="text-theme-danger-500 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            id="circle-exclamation-mark"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 10.5v-5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 14h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </span>
      <div
        class="pl-3"
      >
        <button
          class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
          data-ring-focus-margin="-m-1"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="eye"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                />
                <path
                  d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                />
              </g>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
